syntax = "proto3";

option java_package = "sinnet.grpc.projects";
option java_outer_classname = "ProjectsProto";
option java_multiple_files = true;

package projects;

service Projects {
  rpc remove(RemoveCommand) returns (RemoveResult);
  rpc reserve(ReserveRequest) returns (ReserveReply);
  rpc update(UpdateCommand) returns (UpdateResult);
  rpc list(ListRequest) returns (ListReply);
  rpc userStats(UserStatsRequest) returns (UserStatsReply);
}

message RemoveCommand {
  UserToken userToken = 1;
  ProjectId projectId = 2;
}
message RemoveResult {
  bool success = 1;
}

/** Empty request just to create Reply. */
message ReserveRequest {
}

/** ProjectId which you may use to create new project. */
message ReserveReply {
  ProjectId entityId = 1;
}

/* Test comment. */
message UpdateCommand {
  ProjectId entityId = 1;
  ProjectModel model = 2;
}
message UpdateResult {
  ProjectId entityId = 1;
}

message ListRequest {
  string emailOfRequestor = 1;
}
message ListReply {
  repeated Project projects = 1;
}

message UserStatsRequest {
  string emailOfRequestor = 1;
}
message UserStatsReply {
  int32 numberOfProjects = 1;
}

message Project {
  ProjectId id = 1;
  ProjectModel model = 2;
}

message ProjectId {
  string eId = 1;
  int64 eTag = 2;
}

message ProjectModel {
  string name = 1;
  string emailOfOwner = 2;
}

/** About the requestor */
message UserToken {
  string requestorEmail = 1;
}
