syntax = "proto3";

option java_package = "sinnet.grpc.projects";
option java_outer_classname = "ProjectsProto";
option java_multiple_files = true;

package projects;

service Projects {
  rpc list(ListRequest) returns (ListReply) {}
}

message ListRequest {
  string emailOfRequestor = 1;
}

message ListReply {
  repeated AvailableProject projects = 1;
}

message AvailableProject {
  string id = 1;
  string name = 2;
}
